objects/LLC_BI__Loan__c.object
<CustomObject>
    <description>The Loan Object stores information of the details of a Loan.</description>
    <fields>
        <fullName>AIP_Maximum_Amount__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This field will calculate the maximum lendable amount for the applicant.</description>
        <formula>IF(AND(LLC_BI__Account__r.Number_of_Dependents__c =1, What_is_your_outstanding_balance__c =0),LLC_BI__Account__r.Salary__c * 4.5, 
IF(AND(LLC_BI__Account__r.Number_of_Dependents__c =1, What_is_your_outstanding_balance__c &gt; 100),LLC_BI__Account__r.Salary__c * 4.25, 
IF(AND(LLC_BI__Account__r.Number_of_Dependents__c =2, What_is_your_outstanding_balance__c = 0),LLC_BI__Account__r.Salary__c * 4, 
IF(AND(LLC_BI__Account__r.Number_of_Dependents__c =2, What_is_your_outstanding_balance__c &gt; 100),LLC_BI__Account__r.Salary__c * 3.85, 
(LLC_BI__Account__r.Salary__c * 4.75)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIP Maximum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Number_of_Acct_Receiving_ODP__c</fullName>
        <inlineHelpText>I can control the length of this field to help ensure data integrity if I choose to.</inlineHelpText>
        <label>Account Number of Acct Receiving ODP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_for_loan__c</fullName>
        <label>Action for Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Place on Early Warning List</fullName>
                </value>
                <value>
                    <fullName>Send to Recoveries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Under_Consideration_Narrative__c</fullName>
        <label>Actions Under Consideration Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Amount_Collected__c</fullName>
        <label>Amount Collected</label>
        <summarizedField>LLC_BI__Fee__c.Amount_Collected__c</summarizedField>
        <summaryForeignKey>LLC_BI__Fee__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Interest__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This field is utilised in the interest calculation for mortgage payments.</description>
        <label>Annual Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Application_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates when the application is complete.</inlineHelpText>
        <label>Application Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Narrative__c</fullName>
        <label>Approval Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Authorization_to_pull_credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization to pull credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Available_for_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Broker Loans</relationshipLabel>
        <relationshipName>BrokerLoans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Name_to_Appear_on_Card__c</fullName>
        <description>For credit card applications</description>
        <inlineHelpText>If different from Legal Name, what is the Business Name to appear on the card?  Max of 21 characters</inlineHelpText>
        <label>Business Name to Appear on Card</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSA_Queue__c</fullName>
        <description>This Field is used to define the available queue and current queue used in Claim System.</description>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Queue</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSiDP__Additional_Provisions__c</fullName>
        <description>Users manually populate this optional text field. This field is used to enter any additional provisions the lender wants to include and it displays on the CSi Change in Terms Agreement.</description>
        <inlineHelpText>Populate this field to enter additional provisions on the CSi Change in Terms Agreement.</inlineHelpText>
        <label>Additional Provisions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSiDP__Is_SBA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- Users manually populate this optional text field. This field indicates whether or not the loan is a SBA loan.</description>
        <inlineHelpText>Populate this field to indicate if this is a SBA loan.</inlineHelpText>
        <label>-D Is SBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculate_Monthly_Payment__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This field is to identify if the monthly payment should be calculated for illustrative purposes.</description>
        <label>Calculate Monthly Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Analysis_Narrative__c</fullName>
        <label>Collateral Analysis Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Combined_Collateral_Recovery_Value__c</fullName>
        <description>This formula calculates the total recovery value of the collateral. Created for the ABN Amro use case - DMR - 000321.</description>
        <formula>LLC_BI__Loan_Collateral_Aggregate__r.Total_Collateral_Recovery_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Collateral Recovery Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Combined_Collateral_Value__c</fullName>
        <description>This formula calculates the total value of the collateral based on the lower either Market Value or Subscription Value. Created for the ABN Amro use case and used for Reat Estate. - DMR - 000321</description>
        <formula>IF
(Total_Subscription_Amount__c= 0, LLC_BI__Total_Collateral_Value__c,
IF (LLC_BI__Total_Collateral_Value__c &gt;  Total_Subscription_Amount__c, Total_Subscription_Amount__c , 
LLC_BI__Total_Collateral_Value__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Collateral Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments_on_business_recent_performance__c</fullName>
        <label>Comments on business recent performance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Conveyancer_Address__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This captures the conveyancer&apos;s address.</description>
        <label>Conveyancer Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conveyancer__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This field is meant to capture the Legal Organisations name for conveyancing.</description>
        <label>Conveyancer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Action_Notes__c</fullName>
        <label>Credit Action Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Action__c</fullName>
        <label>Credit Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Check_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in AIP mortgage process for EMEA region. This is to identify if the credit check has been completed.</description>
        <label>Credit Check Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_moved_into_address__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This is to capture the date when applicant moved to the current address.</description>
        <label>Date moved into address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Until_Anticipated_Closing__c</fullName>
        <formula>IF( 
NOT( 
OR( 
ISPICKVAL(LLC_BI__Stage__c , &quot;Booked&quot;),ISPICKVAL(LLC_BI__Stage__c , &quot;Complete&quot;))), 
FLOOR((LLC_BI__CloseDate__c - TODAY())),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Anticipated Closing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This is used to capture the deposit payment the applicant wants to make towards the mortgage.</description>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Credit_Cards__c</fullName>
        <label>Do you have Credit Cards?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_pay_off_the_balance_every_month__c</fullName>
        <label>Do you pay off the balance every month?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_regularly_receive_commission__c</fullName>
        <label>Do you regularly receive commission?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Expenses__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This identifies the estimated monthly expenses.</description>
        <label>Estimated Monthly Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Property_Value__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This identifies the estimated property value the customer is willing to purchase.</description>
        <label>Estimated Property Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Summary_Narrative__c</fullName>
        <label>Executive Summary Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exit_Management__c</fullName>
        <description>This field is used in the Financial Difficulty route for the Forbearence data capture workflow.</description>
        <label>Exit Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unable to agree Forbearance</fullName>
                </value>
                <value>
                    <fullName>Exposure</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
                <value>
                    <fullName>Client in Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exposure_Cap__c</fullName>
        <description>Used in Exposure fieldset for loan collection</description>
        <formula>LLC_BI__Account__r.Exposure_Cap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exposure Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Analysis__c</fullName>
        <description>This field is used in the Loan Credit Memo to import financial spreads data into the credit memo.</description>
        <label>Financial Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Forbearance_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in the Financial Difficulty route for the Forbearence data capture workflow.</description>
        <label>Forbearance Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forbearance__c</fullName>
        <description>This field is used in the Financial Difficulty route for the Forbearence data capture workflow.</description>
        <formula>IF(OR(Unauthorised_borrowing__c = TRUE, Previous_CCJ__c = TRUE,  Loan_in_Arrears__c  = TRUE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forbearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Product_Name__c</fullName>
        <formula>TEXT(LLC_BI__Product_Line__c) + &quot;-&quot; + TEXT(LLC_BI__Product_Type__c) + &quot;-&quot; + TEXT(LLC_BI__Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Collateral_Value__c</fullName>
        <label>Gross Collateral Value</label>
        <summarizedField>LLC_BI__Loan_Collateral__c.LLC_BI__Collateral_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guarantor_Analysis_Narrative__c</fullName>
        <label>Guarantor Analysis Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HVCRE_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HVCRE Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_many_borrowers__c</fullName>
        <label>How many borrowers?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignore_Documents_Outstanding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Documents Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Lending_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the loan is being approved based on individual lending authority</inlineHelpText>
        <label>Individual Lending Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Demo_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this is a loan commonly demo&apos;d that needs to be updated in data loads.</inlineHelpText>
        <label>Is Demo Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_property_a_flat_or_leasehold_home__c</fullName>
        <description>This field is used in AIP mortgage process for EMEA region. This field captures if the property is a flat or lease hold.</description>
        <label>Is the property a flat or leasehold home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Risks_Mitigants__c</fullName>
        <description>Field used for Credit Memo</description>
        <label>Key Risks_Mitigants</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLCLP__LP_User_Defined_1__c</fullName>
        <label>LP User Defined 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__LP_User_Defined_2__c</fullName>
        <description>LP User Defined</description>
        <label>LP User Defined 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__LP_User_Defined_3__c</fullName>
        <description>LP User Defined</description>
        <label>LP User Defined 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI_Appraiser__c</fullName>
        <label>Appraiser</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI_Loan_c_Todays_Date_c__c</fullName>
        <description>For Form&apos;s gen</description>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC_BI__Loan__c.Todays_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__APR__c</fullName>
        <description>This percent field is optional and is populated once an offer is selected during the Retail Loan Workflow. It populates with the Annual Percentage Rate.</description>
        <label>APR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Officer__c</fullName>
        <description>This field is optional. It is manually populated. The Account Officer field is typically used to identify the employee responsible for servicing the account (if different from the Loan Officer).</description>
        <label>Account Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is automatically populated during loan creation. This field is a lookup to a relationship/account that the loan is associated to and denotes the primary borrower for the loan.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Accrued_Interest__c</fullName>
        <description>This field is optional. It is manually populated. This currency field is used to specify the current amount of interest accrued on the loan.</description>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adverse_Action_Flag__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated when an adverse action is approved. This field is used to flag an adverse action workflow. Using a 1 updates this field&apos;s stage to complete and status to declined.  Using a 0 indicates it requires approval.</description>
        <inlineHelpText>If AAF = 1, then the stage was changed to decline by Credit. If AAF = 0, then it was changed by non-credit and required approval.</inlineHelpText>
        <label>Adverse Action Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Allocated_Facility_Amount__c</fullName>
        <description>This optional field is automatically populated. This field sums the amounts from each of the participation records related to the loan.</description>
        <label>Allocated Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortized_Term_Months__c</fullName>
        <description>This field is optional, but is required for Pricing and Rate Structure. It is manually populated. This field is used to specify the length of time (in months) over which the principal amount of the loan will be paid.</description>
        <label>Amortized Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortized_Term__c</fullName>
        <description>Deprecated field, no longer in use</description>
        <label>Amortized Term (Months) - D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__AmountOutstanding__c</fullName>
        <description>The user populates this text field to record the borrower’s outstanding loan balance. By default, this field is blank.</description>
        <inlineHelpText>The amount outstanding for a line of commitment.</inlineHelpText>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Available__c</fullName>
        <description>This field is automatically populated via a formula. It is used to either reference or calculate the availability for a given level in the multi-level facility (for example, Main, Limit, Sublimit, or Takedown).</description>
        <formula>IF(ISBLANK(LLC_BI__Availability_From_Core__c), LLC_BI__Amount__c - LLC_BI__AmountOutstanding__c, LLC_BI__Availability_From_Core__c)</formula>
        <label>Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_New_Money__c</fullName>
        <description>The field specifies the loan&apos;s dollar amount of new money. It is optional and manually populated.</description>
        <label>New Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Unused__c</fullName>
        <description>This field is optional and specifies the amount of a multi-tiered loan commitment that remains unused over a specified period of time (for example, trailing 12 months) or to represent a similar reference. The user can manually populate it or it can be auto-populated via mapping from the financial institution&apos;s core.</description>
        <label>Amount Unused</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is required. It is manually populated. It contains the full original amount of the Loan; this is the amount of the Loan at the time it was booked. This value should not change over time and is consistent over installment and line of credit products. This is used to calculate exposure for Line of Credit Products.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Rate_Increase__c</fullName>
        <description>The system automatically populates this optional field using values from the Product Feature with how much the interest rate increases annually. The Annual Rate Increase is added to the Teaser Rate.</description>
        <inlineHelpText>This system-populated field displays how much the interest rate increases annually.</inlineHelpText>
        <label>Annual Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is automatically populated. This lookup field is used to specify the application record that is associated to the loan and is used as part of the SBA process and Customer Portal.</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_Loan_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The user populates this currency field to determine the maximum amount approved for the loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the maximum amount approved for a loan.</inlineHelpText>
        <label>Approved For Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Attorney__c</fullName>
        <description>This field is optional. It is manually populated. This text field is used to specify the attorney associated with loan closing.</description>
        <label>Attorney</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorization_Date__c</fullName>
        <description>This field is optional. It can be used to specify the date an SBA Authorization is received.</description>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Decision_Status__c</fullName>
        <description>This field is automatically updated via the auto decision process. It stores the result of the auto decision process.</description>
        <label>Auto-Decision Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Pay_Account__c</fullName>
        <description>This field is manually set. This is a text field used to specify the relationship/account being used to auto-pay the loan. Only used for reporting purposes.</description>
        <label>Auto Pay Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually set. It is a boolean field. When enabled, it flags that the loan is set up to use an auto-pay system. When disabled, it flags that the loan is not set up to use an auto-pay system. This field is only used for reporting purposes.</description>
        <label>Auto Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Availability_From_Core__c</fullName>
        <description>This field is optional and specifies the amount that remains available for advances. The user can manually populate it or it can be populated via mapping from the financial institution&apos;s core. nCino recommends that this field be populated from the core in order to display the correct availability for non-revolving loans.</description>
        <label>Availability from Core</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Payment__c</fullName>
        <description>This field is manually set. It is optional, but should be populated if LLC_BI__Balloon__c is set. This field is used to specify the total amount for the balloon payment.</description>
        <inlineHelpText>The total amount for the balloon payment</inlineHelpText>
        <label>Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Product_Structure__c</fullName>
        <description>Administrators manually select Ballon Amount or Balloon Term from this picklist, which populates dependently on the Balloon__c field. Balloon Amount and Balloon Term determine how the Balloon calculation is performed, whether based on the total amount of the loan or the total duration of the loan.</description>
        <label>Balloon Product Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balloon Amount</fullName>
                </value>
                <value>
                    <fullName>Balloon Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually select this optional boolean field to indicate whether the product is a Balloon product. By default, it is false.</description>
        <inlineHelpText>Balloon loan indicator.</inlineHelpText>
        <label>Balloon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Address__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the city of the billing address for a loan.</description>
        <label>Billing City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_State__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the state of the billing address for a loan.</description>
        <label>Billing State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Street__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the street address of the billing address for a loan.</description>
        <label>Billing Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Zipcode__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the ZIP code of the billing address for a loan.</description>
        <label>Billing Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_DateTime__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <inlineHelpText>Booked Date is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</inlineHelpText>
        <label>Booked Date Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>